# push2ipfs

./: README.org  push2ipfs.cabal  shell.nix
app/: Main.hs
src/: Main.hs
src/Network/: CloudFlare.hs  IPFS.hs
