name:                push2ipfs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://alex.px.io
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.org

library
  hs-source-dirs:      src
  exposed-modules:     Network.CloudFlare
                     , Network.IPFS
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , lens
                     , aeson
                     , lens-aeson
                     , bytestring
                     , text
                     
executable push2ipfs
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , push2ipfs
                     , bytestring
                     , text
                     , aeson